2010-09-13  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.2.

	* src/openpgp.c (cmd_select_file): Override data of number_of_bytes.

	* src/openpgp-do.c (gpg_do_table_init): Calculate number of byte
	which Data Objects consumes.

2010-09-12  Kaz Kojima <kkojima@rr.iij4u.or.jp>

	* src/call-rsa.c (rsa_decrypt): Debug output only when DEBUG.

	* boards/STM32_PRIMER2/hw_config.c (USB_Cable_Config): Fix GPIO.
	(set_led): Ditto.

	* boards/STM32_PRIMER2/board.c (hwinit1): Added LED initialization.

2010-09-11  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-icc.c (ATR): Fixed.
	(icc_send_params): New function.
	(icc_handle_data): Handle ICC_SET_PARAMS request.

	* src/random.c (random_bytes_get, random_bytes_free, get_random):
	Clear used random bytes.

	* src/flash.c (flash_clear_halfword): New function.

2010-09-10  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.1.

	* src/usb_desc.c (gnukStringSerial): Change the value so that
	libccid doesn't get confused.

	* src/openpgp.c (gpg_change_keystring): Support key for decryption
	as well.
	(cmd_read_binary): Use openpgpcard_aid.
	(cmd_pso): call ac_reset_pso_other.

	* src/openpgp-do.c (openpgpcard_aid): Renamed from aid, and exported.
	(do_ds_count_initial_value): New const variable.
	(num_prv_keys): New variable.
	(gpg_do_write_prvkey): Remove contents of keystring only if
	++num_prv_keys == NUM_ALL_PRV_KEYS.
	(gpg_do_chks_prvkey): Call flash_do_release.
	(gpg_do_table_init): Initialize with do_ds_count_initial_value.
	Initialize num_prv_keys.
	(gpg_do_write_simple): Support removing DO.
	(gpg_do_increment_digital_signature_counter): Call flash_do_release.

	* src/gnuk.h (NUM_ALL_PRV_KEYS): New definition.
	(OPENPGP_CARD_INITIAL_PW1): New definition.
	(enum kind_of_key): Rename.

	* src/ac.c (ac_reset_pso_cds): New function.

2010-09-09  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* boards/STM32_PRIMER2/{board.c,board.h,board.mk,hw_config.c,mcuconf.h}:
	New files.
