@@ -6,7 +6,7 @@ encouraging the development, testing the implementation, suggesting
 improvements, or fixing bugs.  Here is a list of those people.
 
 Jan Sur			jan@suhr.info
-NAGAMI Takeshi		nagami-takeshi@aist.go.jp
 Kaz Kojima		kkojima@rr.iij4u.or.jp
+NAGAMI Takeshi		nagami-takeshi@aist.go.jp
 Shane Coughlan		scoughlan@openinventionnetwork.com
 Werner Koch		wk@gnupg.org
